arma-rs/tests/derive/struct_fail_unnamed_none.rs
use arma_rs_proc::{FromArma, IntoArma};

#[derive(IntoArma, FromArma)]
pub struct DeriveTest();

pub fn main() {}
